# claude-mac-sync

./: .gitignore  CLAUDE.md  README.md  UNINSTALL.md  claude-sync-daemon.sh  claude-sync-setup.sh  cleanup-backups-fast.sh  cleanup-backups-simple.sh  test_sync.sh  uninstall.sh  zshrc-functions.sh
watch/: Cargo.toml
watch/src/: config.rs  lock.rs  main.rs  state.rs  sync.rs  watcher.rs
